kitten/reported_bugs/rust/rust-83182/stderr.txt
error[E0080]: it is undefined behavior to use this value

  --> mutant.rs:15:1

   |

15 | const STR_TOO_LONG : & str = unsafe { mem :: transmute ( ( & 42u8 , 999usize ) ) } ;

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling reference (going beyond the bounds of its allocation)

   |

   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.



error[E0080]: it is undefined behavior to use this value

  --> mutant.rs:16:1

   |

16 | const NESTED_STR_MUCH_TOO_LONG : ( & str , ) = ( unsafe { mem :: transmute ( ( & 42 , usize :: MAX ) ) } , ) ;

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid reference metadata: slice is bigger than largest supported object at .0

   |

   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.



error[E0080]: it is undefined behavior to use this value

  --> mutant.rs:17:1

   |

17 | const STR_LENGTH_PTR : & str = unsafe { mem :: transmute ( ( & 42u8 , & 3 ) ) } ;

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered non-integer slice length in wide pointer

   |

   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.



error[E0080]: it is undefined behavior to use this value

  --> mutant.rs:18:1

   |

18 | const MY_STR_LENGTH_PTR : & MyStr = unsafe { mem :: transmute ( ( & 42u8 , & 3 ) ) } ;

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered non-integer slice length in wide pointer

   |

   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.



error[E0080]: it is undefined behavior to use this value

  --> mutant.rs:19:1

   |

19 | const MY_STR_MUCH_TOO_LONG : & MyStr = unsafe { mem :: transmute ( ( & 42u8 , usize :: MAX ) ) } ;

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered invalid reference metadata: slice is bigger than largest supported object

   |

   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.



error[E0080]: it is undefined behavior to use this value

  --> mutant.rs:20:1

   |

20 | const STR_NO_INIT : & str = unsafe { mem :: transmute :: < & [ _ ] , _ > ( & [ MaybeUninit :: < u8 > { uninit : ( ) } ] ) } ;

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized data in `str` at .<deref>

   |

   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.



error: internal compiler error: compiler/rustc_mir/src/interpret/validity.rs:948:17: Unexpected error during validation: unable to turn pointer into raw bytes



thread 'rustc' panicked at 'Box<Any>', /rustc/107896c32d5dda4db508968ff34997a39d286966/library/std/src/panic.rs:59:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.52.0-nightly (107896c32 2021-03-15) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [eval_to_allocation_raw] const-evaluating + checking `MYSTR_NO_INIT`

#1 [eval_to_const_value_raw] simplifying constant for the type system `MYSTR_NO_INIT`

end of query stack

error: aborting due to 7 previous errors



For more information about this error, try `rustc --explain E0080`.

